	- FIXED: Added rlDisableShader for SetShaderValue* functions to prevent bugs.
	Should be removed if added back in raylib.
	- ADDED: SDL3 Events.
	- ADDED: Fast tilemap example.
	- ADDED: RectPack using stbrp_pack_rects. Atlas packer tutorial.
	- ADDED: SetImageData.
	- FIXED: DrawTextBoxed Could draw text outside rect when using special characters.
	Also accepts optional tabSize argument.

------------------------------------------------------------------------
Release:	ReiLua version 0.8.0		Using Raylib 5.0 and Forked Raygui 4.0
------------------------------------------------------------------------
KEY CHANGES:
	- CHANGE: Process renamed to update to be more inline with naming of raylib and common convention.
	- ADDED: apiScanner.lua for searching unimplemented functions from raylib.
	- ADDED Automation events.
	- CHANGE: Raygui lib callbacks to single table.
	- ADDED OpenGL Stencil management functions.
	- CHANGE: Object libraries like Vector2 optimizations. Separated table argument style for new and set methods.
	Option for pre generated temp objects. There was a lot of overhead on old new method.
	- CHANGE: Use GetApplicationDirectory instead of GetWorkingDirectory for basePath if no path argument given.
	- ADDED Userdata objects can be passed in table. Useful on wrapper libraries. Name should be in camelCase.

DETAILED CHANGES:
	- ADDED: GetBufferElementSize and GetBufferLength.
	- FIXED: Compress_data example.
	- FIXED: GuiGetFont return lightuserdata.
	- FIXED: GuiSetStyle, GuiLoadStyle and GuiLoadStyleDefault sets state->guiDefaultFont to GuiGetFont.
	- ADDED: TextFindIndex.
	- FIXED: SeekMusicStream was not assigned.
	- ADDED: rlEnableStatePointer and rlDisableStatePointer for GRAPHICS_API_OPENGL_11.
	- ADDED: rlBlitFramebuffer and rlEnablePointMode.
	- ADDED: Vector3Project and Vector3Reject.
	- ADDED: IsKeyPressedRepeat, IsGamepadButtonUp, GetGamepadButtonPressed and GetMouseWheelMoveV.
	- ADDED: ImageDrawText.
	- ADDED: DrawTextureEx.