@@ -48,6 +48,7 @@ DETAILED CHANGES:
 	- ADDED: SetImageData.
 	- FIXED: DrawTextBoxed Could draw text outside rect when using special characters.
 	Also accepts optional tabSize argument.
+	- ADDED: DrawTextBoxed Color change escape sequence.
 
 ------------------------------------------------------------------------
 Release:	ReiLua version 0.8.0		Using Raylib 5.0 and Forked Raygui 4.0
